--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <title>Socket.IO chat</title>
-        <!--<link rel="stylesheet" type="text/css" href="./style.css" media="screen">-->
         <style>
             body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
@@ -21,7 +20,30 @@
         <ul id="messages"></ul>
         <form id="form" action="">
             <input id="input" autocomplete="off" />
-            <button>Send</button>
+            <button type="submit">Send</button>
         </form>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+          let socket = io();
+
+          let messages = document.getElementById('messages');
+          let form = document.getElementById('form');
+          let input = document.getElementById('input');
+
+          form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            if (input.value) {
+              socket.emit('chat message', input.value);
+              input.value = '';
+            }
+          });
+
+          socket.on('chat message', function(msg) {
+            let item = document.createElement('li');
+            item.textContent = msg;
+            messages.appendChild(item);
+            window.scrollTo(0, document.body.scrollHeight);
+          });
+        </script>
     </body>
 </html>
